--- a/BaseTextView/Base.lproj/Main.storyboard
+++ b/BaseTextView/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="Gt0-dN-lam" firstAttribute="top" secondItem="FzJ-nJ-dkk" secondAttribute="bottom" constant="25" id="0v6-d2-z3G"/>
                                             <constraint firstItem="fzQ-rc-lOC" firstAttribute="top" secondItem="Ab0-EV-x67" secondAttribute="top" constant="88" id="3vk-Fe-ide"/>
